// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`divider-component renders dashed horizontal divider (role + aria-orientation) 1`] = `
<divider-component dashed="">
  <!---->
  <div class="sc-divider">
    <div aria-orientation="horizontal" class="divider divider-dashed divider-horizontal" role="separator"></div>
  </div>
</divider-component>
`;

exports[`divider-component renders divider with centered text and provides aria-label (derived from slot) + aria-orientation 1`] = `
<divider-component orientation="center">
  <!---->
  <div class="sc-divider">
    <div aria-label="Center" aria-orientation="horizontal" class="divider divider-horizontal divider-with-text divider-with-text-center" role="separator">
      <span class="divider-inner-text">
        Center
      </span>
    </div>
  </div>
</divider-component>
`;

exports[`divider-component renders divider with custom styles in text span and keeps aria-label 1`] = `
<divider-component orientation="center" styles="color: red; font-weight: bold;">
  <!---->
  <div class="sc-divider">
    <div aria-label="Styled" aria-orientation="horizontal" class="divider divider-horizontal divider-with-text divider-with-text-center" role="separator">
      <span class="divider-inner-text" style="color: red; font-weight: bold;">
        Styled
      </span>
    </div>
  </div>
</divider-component>
`;

exports[`divider-component renders divider with left aligned text and margin override class 1`] = `
<divider-component orientation="left" remove-orientation-margin="left">
  <!---->
  <div class="sc-divider">
    <div aria-label="Left" aria-orientation="horizontal" class="divider divider-horizontal divider-no-default-orientation-margin-left divider-with-text divider-with-text-left" role="separator">
      <span class="divider-inner-text">
        Left
      </span>
    </div>
  </div>
</divider-component>
`;

exports[`divider-component renders horizontal divider by default (role + aria-orientation) 1`] = `
<divider-component>
  <!---->
  <div class="sc-divider">
    <div aria-orientation="horizontal" class="divider divider-horizontal" role="separator"></div>
  </div>
</divider-component>
`;

exports[`divider-component renders vertical divider when direction="vertical" (role + aria-orientation) 1`] = `
<divider-component direction="vertical">
  <!---->
  <div class="sc-divider">
    <div aria-orientation="vertical" class="divider divider-vertical" role="separator"></div>
  </div>
</divider-component>
`;

exports[`divider-component uses explicit aria-label prop (attribute) when provided (text variant) 1`] = `
<divider-component aria-label="Section break" orientation="center">
  <!---->
  <div class="sc-divider">
    <div aria-label="Section break" aria-orientation="horizontal" class="divider divider-horizontal divider-with-text divider-with-text-center" role="separator">
      <span class="divider-inner-text">
        Center
      </span>
    </div>
  </div>
</divider-component>
`;
